fix(style.css): change text contrast

--- a/f1/style.css
+++ b/f1/style.css
@@ -111,7 +111,7 @@ input[type="text"], input[type="email"], input[type="tel"] {
   box-sizing: border-box;
 }
 button {
-  background: #27ae60; 
+  background: #1e8449; 
   color: white; 
   border: none; 
   padding: 16px 30px; 
